[package]
name = "superstack-rust-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }
rustls = "0.23"

anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
uuid = { version = "1.18", features = ["v4", "serde"] }
bs58 = "0.5"
base64 = "0.22"
hex = "0.4"
bincode = "1.3"
ipnetwork = { version = "0.20", features = ["serde"] }

alloy = { version = "1.0", default-features = false, features = [
    "signer-local",
] }

[dev-dependencies]
dotenv = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"


[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "api_info"
path = "examples/api_info.rs"

[[example]]
name = "order"
path = "examples/order.rs"