[package]
name = "superstack-rust-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }
rustls = "0.23"

anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
uuid = { version = "1.18", features = ["v4", "serde"] }
bs58 = "0.5"
base64 = "0.22"
hex = "0.4"
bincode = "1.3"
ipnetwork = { version = "0.20", features = ["serde"] }

alloy = { version = "1.0", default-features = false, features = [
    "signer-local",
] }

[dev-dependencies]
dotenv = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"


[[example]]
name = "api_info"
path = "examples/api_info.rs"

[[example]]
name = "order"
path = "examples/order.rs"

[[example]]
name = "order_and_cancel"
path = "examples/order_and_cancel.rs"

[[example]]
name = "order_and_cancel_cloid"
path = "examples/order_and_cancel_cloid.rs"

[[example]]
name = "order_and_schedule_cancel"
path = "examples/order_and_schedule_cancel.rs"

[[example]]
name = "order_and_modify"
path = "examples/order_and_modify.rs"

[[example]]
name = "leverage"
path = "examples/leverage.rs"

[[example]]
name = "margin"
path = "examples/margin.rs"

[[example]]
name = "usdc_transfer"
path = "examples/usdc_transfer.rs"

[[example]]
name = "spot_transfer"
path = "examples/spot_transfer.rs"

[[example]]
name = "usd_class_transfer"
path = "examples/usd_class_transfer.rs"