[project]
name = "superstack"
version = "0.1.0"
description = "Python port of superstack-rust-sdk"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "typing-extensions>=4.8.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# comment: 패키지 내 포함 파일 자동 포함
include-package-data = true

# comment: 패키지 소스 루트를 superstack_py 로 지정
[tool.setuptools.package-dir]
"" = "superstack_py"

[tool.setuptools.packages.find]
where = ["superstack_py"]
include = ["superstack*"]

[project.urls]
Source = "https://github.com/NA-DEGEN-GIRL/superstack-rust-python"