[project]
name = "superstack"
version = "0.1.0"
description = "Python port of superstack-rust-sdk"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "typing-extensions>=4.8.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
packages = ["superstack"]                 # <-- 추가: top-level 패키지명 명시
package-dir = { "" = "superstack_py" }    # <-- 추가: 패키지 소스 루트는 superstack_py/

[project.urls]
Source = "https://github.com/NA-DEGEN-GIRL/superstack-rust-python"